; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_dma_free_ringmemory.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_dma_free_ringmemory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_dma_ring = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bwn_dma_ring*)* @bwn_dma_free_ringmemory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bwn_dma_free_ringmemory(%struct.bwn_dma_ring* %0) #0 {
  %2 = alloca %struct.bwn_dma_ring*, align 8
  store %struct.bwn_dma_ring* %0, %struct.bwn_dma_ring** %2, align 8
  %3 = load %struct.bwn_dma_ring*, %struct.bwn_dma_ring** %2, align 8
  %4 = getelementptr inbounds %struct.bwn_dma_ring, %struct.bwn_dma_ring* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bwn_dma_ring*, %struct.bwn_dma_ring** %2, align 8
  %7 = getelementptr inbounds %struct.bwn_dma_ring, %struct.bwn_dma_ring* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @bus_dmamap_unload(i32 %5, i32 %8)
  %10 = load %struct.bwn_dma_ring*, %struct.bwn_dma_ring** %2, align 8
  %11 = getelementptr inbounds %struct.bwn_dma_ring, %struct.bwn_dma_ring* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.bwn_dma_ring*, %struct.bwn_dma_ring** %2, align 8
  %14 = getelementptr inbounds %struct.bwn_dma_ring, %struct.bwn_dma_ring* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.bwn_dma_ring*, %struct.bwn_dma_ring** %2, align 8
  %17 = getelementptr inbounds %struct.bwn_dma_ring, %struct.bwn_dma_ring* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @bus_dmamem_free(i32 %12, i32 %15, i32 %18)
  ret void
}

declare dso_local i32 @bus_dmamap_unload(i32, i32) #1

declare dso_local i32 @bus_dmamem_free(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
